# macaw-openvoice

./: .audit-requirements.txt  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  Dockerfile.worker  Makefile  README.md  SECURITY.md  dev.sh  docker-compose.yml  e2e_test.ipynb  hatch_build.py  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
demo/: README.md  demo_voice_cloning.py  start.sh
demo/backend/: app.py  config.py  jobs.py  main.py
demo/frontend/: package-lock.json  package.json
demo/frontend/app/: page.tsx
docs/: docusaurus.config.ts  sidebars.ts
docs/docs/: intro.md
docs/docs/api-reference/: grpc-internal.md  rest-api.md  websocket-protocol.md
docs/docs/architecture/: overview.md  scheduling.md  session-manager.md  vad-pipeline.md
docs/docs/community/: changelog.md  contributing.md  roadmap.md
docs/docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/docs/guides/: adding-engine.md  batch-transcription.md  cli.md  full-duplex.md  streaming-stt.md
docs/docs/models/: faster-whisper.md  index.md  kokoro.md  silero-vad.md  wenet.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/static/: CNAME
macaw/: __init__.py  _audio_constants.py  _dsp.py  _grpc_constants.py  _null_metrics.py  _types.py  engines.py  exceptions.py  logging.py
macaw/alignment/: __init__.py  ctc_aligner.py  interface.py
macaw/audio_effects/: __init__.py  chain.py  interface.py  pitch_shift.py  reverb.py
macaw/backends/: __init__.py  venv_manager.py
macaw/cli/: __init__.py  backends.py  models.py  ps.py  pull.py  remove.py  serve.py  transcribe.py
macaw/codec/: __init__.py  g711.py  interface.py  mp3.py  opus.py  output_format.py
macaw/config/: __init__.py  manifest.py  postprocessing.py  preprocessing.py  settings.py
macaw/postprocessing/: itn.py  pipeline.py  stages.py
macaw/postprocessing/entity_detection/: __init__.py  interface.py  patterns.py  regex_detector.py
macaw/postprocessing/formatters/: __init__.py  html.py  interface.py  srt.py  txt.py
macaw/postprocessing/ssml/: __init__.py  directives.py  parser.py
macaw/preprocessing/: __init__.py  audio_io.py  dc_remove.py  gain_normalize.py  pipeline.py  resample.py  stages.py  streaming.py
macaw/proto/: __init__.py  stt_worker.proto  stt_worker_pb2.py  stt_worker_pb2.pyi  stt_worker_pb2_grpc.py  tts_worker.proto  tts_worker_pb2.py  tts_worker_pb2.pyi  tts_worker_pb2_grpc.py  vc_worker.proto  vc_worker_pb2.py  vc_worker_pb2.pyi  vc_worker_pb2_grpc.py
macaw/registry/: catalog.py  catalog.yaml  downloader.py  registry.py
macaw/scheduler/: async_jobs.py  batching.py  cancel.py  converters.py  latency.py  metrics.py  queue.py  scheduler.py  streaming.py  tts_converters.py  tts_metrics.py
macaw/server/: app.py  audio_downloader.py  constants.py  dependencies.py  error_handlers.py  formatters.py  grpc_channels.py  tts_service.py  tts_text_buffer.py  voice_store.py  ws_context_manager.py  ws_protocol.py
macaw/server/dubbing/: __init__.py  orchestrator.py
macaw/server/models/: alignment.py  dialogue.py  dubbing.py  effects.py  events.py  models.py  multi_context_events.py  requests.py  responses.py  sound_effects.py  speech.py  voice_changer.py  voice_settings.py  voice_training.py  voices.py
macaw/server/pronunciation/: __init__.py  applicator.py  models.py  store.py
macaw/server/routes/: _common.py  alignment.py  dialogue.py  dubbing.py  health.py  multi_context_tts.py  pronunciation.py  realtime.py  sound_effects.py  speech.py  transcriptions.py  transcripts.py  translations.py  voice_changer.py  voice_training.py  voices.py
macaw/server/transcript_store/: __init__.py  filesystem.py  interface.py
macaw/server/webhooks/: __init__.py  config.py  delivery.py
macaw/session/: backpressure.py  cross_segment.py  local_agreement.py  metrics.py  mute.py  ring_buffer.py  state_machine.py  streaming.py
macaw/vad/: detector.py  energy.py  silero.py
macaw/workers/: _constants.py  _engine_loader.py  audio_utils.py  manager.py  torch_utils.py
macaw/workers/sound_effects/: __init__.py  interface.py
macaw/workers/stt/: __main__.py  converters.py  faster_whisper.py  interface.py  main.py  qwen3_asr.py  servicer.py
macaw/workers/tts/: _validation.py  audio_utils.py  chatterbox.py  converters.py  interface.py  kokoro.py  main.py  qwen3.py  servicer.py  ssml_mapper.py
notebooks/: _generate_validation.py  e2e_test.ipynb  validate_api.ipynb  validate_cli.ipynb
scripts/: generate_proto.sh  install.ps1  install.sh
src/macaw/: __init__.py  _types.py  exceptions.py  logging.py
tests/: conftest.py  helpers.py  uvicorn_shim.py
tests/benchmark/: test_codec_performance.py  test_istft_cache.py
tests/integration/: test_m6_integration.py  test_m6_recovery.py  test_m6_stability.py  test_openai_sdk_compat.py  test_roundtrip_tts_stt.py  test_worker_e2e.py  test_ws_stability.py  test_ws_streaming.py
tests/unit/: test_additional_formats_endpoint.py  test_alignment.py  test_alignment_endpoint.py  test_api_models.py  test_async_jobs.py  test_audio_downloader.py  test_audio_effects.py  test_audio_events.py  test_audio_utils.py  test_backend_settings.py  test_backends_cli.py  test_backpressure.py  test_batch_accumulator.py  test_batch_dispatch.py  test_cancel_grpc.py  test_catalog.py  test_character_and_normalized_alignment.py  test_chatterbox_backend.py  test_cli_models.py  test_cli_serve.py  test_cli_transcribe.py  test_cloud_storage_url.py  test_codec_encoder.py  test_commit_strategy.py  test_config.py  test_contract_comparison.py  test_cross_segment_context.py  test_cross_sprint_integration.py  test_deps_separation.py  test_dialogue_endpoint.py  test_diarization_backend.py  test_diarization_endpoint.py  test_diarization_proto.py  test_diarization_readiness.py  test_diarization_servicer.py  test_downloader.py  test_dsp.py  test_dsp_resample.py  test_dubbing.py  test_e2e_batch.py  (+144 more)
(+86 files in other folders)
