[build-system]
requires = ["hatchling", "grpcio-tools==1.78.0"]
build-backend = "hatchling.build"

[project]
name = "macaw-openvoice"
version = "0.1.7"
description = "Voice runtime (STT + TTS) with OpenAI-compatible API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Macaw Team" },
]
keywords = [
    "stt",
    "tts",
    "speech-to-text",
    "text-to-speech",
    "whisper",
    "voice",
    "openai",
    "realtime",
    "streaming",
    "vad",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=24.0,<26.0",
    "numpy>=1.26,<3.0",
    "click>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "scipy>=1.11,<2.0",
    "soundfile>=0.12,<1.0",
    "grpcio>=1.78,<2.0",
    "protobuf>=6.31,<7.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "python-multipart>=0.0.18",
    "huggingface_hub>=0.20,<1.0",
    "opuslib>=3.0.0",
    "nemo_text_processing>=1.1,<2.0"
]

[project.scripts]
macaw = "macaw.cli:cli"

[project.optional-dependencies]
grpc = [
    "grpcio-tools>=1.78,<2.0",
]
faster-whisper = [
    "faster-whisper>=1.1,<2.0",
]
kokoro = [
    "kokoro>=0.1,<1.0",
]
qwen3-tts = [
    "qwen-tts>=0.1,<2.0",
]
qwen3-asr = [
    "qwen-asr>=0.1,<2.0",
]
chatterbox = [
    "chatterbox-tts>=0.1,<1.0",
]
codec = [
    "opuslib>=3.0.0",
]
alignment = [
    "torchaudio>=2.1",
]
stream = [
    "sounddevice>=0.4,<1.0",
    "websockets>=12.0,<14.0",
    "torch>=2.0",
    "torchaudio>=2.0",
]
itn = [
    "nemo_text_processing>=1.1,<2.0",
]
dev = [
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "pytest-cov>=6.0,<7.0",
    "grpcio-tools>=1.78,<2.0",
    "types-PyYAML>=6.0",
    "types-protobuf>=6.31,<7.0",
    "types-grpcio>=1.0",
    "scipy-stubs>=1.11",
    "prometheus_client>=0.20,<1.0",
    "openai>=1.0",
    "radon>=6.0,<7.0",
    "bandit[toml]>=1.8,<2.0",
    "pip-audit>=2.7,<3.0",
    "pre-commit>=4.0,<5.0",
]
all = [
    "macaw-openvoice[grpc,faster-whisper,itn,codec,dev]",
]

[project.urls]
Homepage = "https://github.com/usemacaw/macaw-openvoice"
Documentation = "https://macawvoice.github.io/Macaw-openvoice"
Repository = "https://github.com/usemacaw/macaw-openvoice"
"Bug Tracker" = "https://github.com/usemacaw/macaw-openvoice/issues"
Changelog = "https://github.com/usemacaw/macaw-openvoice/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["macaw"]

[tool.hatch.build.hooks.custom]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["."]
extend-exclude = ["macaw/proto/stt_worker_pb2*", "macaw/proto/tts_worker_pb2*", "inspiracao/", "notebooks/", "docs/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # Managed by formatter
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.isort]
known-first-party = ["macaw"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
mypy_path = "."

[[tool.mypy.overrides]]
module = "macaw.proto.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "faster_whisper.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nemo_text_processing.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "soundfile.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.signal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kokoro.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qwen_tts.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qwen_asr.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chatterbox.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "huggingface_hub.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sounddevice.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opuslib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "websockets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "fastapi",
    "fastapi.*",
    "starlette",
    "starlette.*",
    "uvicorn",
    "uvicorn.*",
    "prometheus_client",
    "prometheus_client.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "macaw.server.routes.*"
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = "macaw.server.error_handlers"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "macaw.vad.silero"
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = "macaw.cli.transcribe"
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.protobuf.*",
    "ignore::DeprecationWarning:grpc.*",
    "ignore::DeprecationWarning:websockets.*",
    "ignore::ResourceWarning",
]
markers = [
    "integration: tests that require installed model",
    "slow: tests that take more than 10s",
]

[tool.coverage.run]
source = ["macaw"]
branch = true
omit = [
    "macaw/proto/*_pb2*.py",
    "macaw/workers/stt/__main__.py",
    "macaw/workers/tts/__main__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "macaw/proto", "inspiracao", "demo"]
skips = ["B101", "B404", "B603", "B614", "B615"]
